--- a/src/assets/styles/components/_section-work.scss
+++ b/src/assets/styles/components/_section-work.scss
@@ -2,7 +2,12 @@ $story-count: 4;
 $preview-width: 70vw;
 
 #work {
+  // height matters with this slide
   height: 100vh; // only slide where fixed height is required
+  @include short-desktop {
+    min-height: breakpoint-min(lg, $breakpoints);
+  }
+
   padding: 0;
   background-color: #eef;
   z-index: 20;
@@ -173,6 +178,11 @@ $preview-width: 70vw;
       display: flex;
       flex-direction: column;
 
+      @include short-desktop {
+        height: calc(100% - 200px);
+        top: 150px;
+      }
+
       .story-content__intro {
         flex: 1;
         padding: 4.5rem 0 0;
@@ -208,6 +218,10 @@ $preview-width: 70vw;
               padding: 5rem 0 0;
             }
           }
+        }
+
+        @include short-desktop {
+          padding: 1rem 0;
         }
       }
 
@@ -299,12 +313,23 @@ $preview-width: 70vw;
                 flex: 1;
                 display: flex;
                 flex-direction: column;
-                justify-content: center;
+                // justify-content: center;
+                align-items: flex-start;
+                overflow-y: auto;
+
+                .story-slide__text-inner {
+                  margin: auto;
+                }
+
+                p:last-child {
+                  margin-bottom: 0;
+                }
               }
 
               &.active {
                 opacity: 1;
                 transition-delay: 0.15s;
+                z-index: 10;
               }
             }
           }
